<?xml version="1.0"?>
<package>
  <name>rostful</name>
  <version>0.0.0</version>
  <description>REST API for ros</description>

  <maintainer email="i@dont.know">Ben Kehoe</maintainer>
  <license>BSD</license>
  <author>Ben Kehoe</author>

  <url type="website">http://wiki.ros.org/rostful</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <export>
  </export>
</package>
