<package>
  <name>rostful</name>
  <version>0.0.10</version>
  <description>
      REST API for ROS
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/asmodehn/rostful</url>
  <url type="bugtracker">https://github.com/asmodehn/rostful/issues</url>

  <author email="benkehoe@somewhere.net">Ben Kehoe</author>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_pip</build_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>python-flask</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>gunicorn</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-requests</build_depend>
  <build_depend>python-wtforms</build_depend>
  <build_depend>python-sqlalchemy</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>python-flask</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>gunicorn</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>python-requests</run_depend>
  <run_depend>python-wtforms</run_depend>
  <run_depend>python-sqlalchemy</run_depend>
  <run_depend>python-simplejson</run_depend>

  <!-- these dependencies are only for testing -->
  <run_depend>python-yaml</run_depend>
  <build_depend>rostest</build_depend>
  <test_depend>rosunit</test_depend>

  <!-- documentation dependencies -->
  <build_depend>python-catkin-pkg</build_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>


