<?xml version="1.0"?>
<package format="2">
  <name>rostful</name>
  <version>0.1.0</version>
  <description>
      REST API for ROS
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/asmodehn/rostful</url>
  <url type="bugtracker">https://github.com/asmodehn/rostful/issues</url>

  <author>Ben Kehoe</author>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_pip</build_depend>

  <depend version_gte="0.3.0">pyros</depend>
  <depend version_gte="6.2.0">click</depend>
  <depend version_gte="1.3.4">webargs</depend>
  <depend version_gte="2.9.1">marshmallow</depend>

  <!--TEMPORARY until pyros declares it properly ( >0.3.0)-->
  <depend version_gte="1.0.1">python-mock</depend>

  <!--<depend version_gte="1.5.3">python-passlib</depend>-->
  <!--<build_depend>dynamic_reconfigure</build_depend>-->
  <build_depend>roslint</build_depend>
  <!--<build_depend>python-flask</build_depend>-->
  <!--<build_depend>gunicorn</build_depend>-->
  <!--<build_depend>rospy</build_depend>-->
  <!--<build_depend>python-requests</build_depend>-->
  <!--<build_depend>python-wtforms</build_depend>-->
  <!--<build_depend>python-sqlalchemy</build_depend>-->

  <!-- we need version 1.2.0 (with to_dict). available from ubuntu package from xenial only. using ros third party released package-->
  <depend version_gte="1.2.0">tblib</depend>

  <depend>python-flask</depend>

  <depend>rospy</depend>
  <depend>python-simplejson</depend>

  <!-- these dependencies are only for testing -->
  <depend>python-yaml</depend>
  <build_depend>rostest</build_depend>
  <test_depend>rosunit</test_depend>

  <!-- documentation dependencies -->
  <build_depend>python-catkin-pkg</build_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>


