<package>
  <name>rostful_examples</name>
  <version>0.0.8</version>
  <description>
      REST API for ROS - Examples
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/asmodehn/rostful</url>
  <url type="bugtracker">https://github.com/asmodehn/rostful/issues</url>

  <author>Ben Kehoe</author>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>driver_base</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>python-flask</build_depend>
  <build_depend>python-celery</build_depend>
  <!-- gunicorn -->
  <build_depend>rospy</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>driver_base</run_depend>
  <run_depend>python-flask</run_depend>
  <run_depend>python-celery</run_depend>
  <!-- gunicorn -->
  <run_depend>rospy</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>turtlesim</run_depend>

  <!-- these dependencies are only for testing -->
  <run_depend>python-yaml</run_depend>
  <build_depend>rostest</build_depend>
  <test_depend>rosunit</test_depend>

  <!-- documentation dependencies -->
  <build_depend>python-catkin-pkg</build_depend>

</package>


