<package>
  <name>rostful</name>
  <version>0.0.2</version>
  <description>
      REST API for ROS
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/benkehoe/rostful</url>
  <url type="bugtracker">https://github.com/benkehoe/rostful/issues</url>

  <author>Ben Kehoe</author>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  
  <!-- these dependencies are only for testing -->
  <run_depend>python-yaml</run_depend>
  <build_depend>rostest</build_depend>
  <test_depend>rosunit</test_depend>

  <!-- documentation dependencies -->
  <build_depend>python-catkin-pkg</build_depend>
  
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>


